@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2020, 2021, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,19 +24,23 @@
 
 /*
  * @test
+ * @enablePreview
  * @library ../
  * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
- * @modules jdk.incubator.foreign/jdk.internal.foreign
- *          jdk.incubator.foreign/jdk.internal.foreign.abi
- *          jdk.incubator.foreign/jdk.internal.foreign.abi.aarch64.linux
- *          jdk.incubator.foreign/jdk.internal.foreign.abi.aarch64.macos
- *          jdk.incubator.foreign/jdk.internal.foreign.abi.x64.windows
- *          jdk.incubator.foreign/jdk.internal.foreign.abi.x64.sysv
+ * @modules java.base/jdk.internal.foreign
+ *          java.base/jdk.internal.foreign.abi
+ *          java.base/jdk.internal.foreign.abi.x64
+ *          java.base/jdk.internal.foreign.abi.x64.sysv
+ *          java.base/jdk.internal.foreign.abi.x64.windows
+ *          java.base/jdk.internal.foreign.abi.aarch64
+ *          java.base/jdk.internal.foreign.abi.aarch64.linux
+ *          java.base/jdk.internal.foreign.abi.aarch64.macos
+ *          java.base/jdk.internal.foreign.abi.aarch64.windows
  * @run testng/othervm --enable-native-access=ALL-UNNAMED VaListTest
  */
 
-import jdk.incubator.foreign.*;
-import jdk.incubator.foreign.VaList;
+import java.lang.foreign.*;
+import java.lang.foreign.VaList;
 import jdk.internal.foreign.abi.aarch64.linux.LinuxAArch64Linker;
 import jdk.internal.foreign.abi.aarch64.macos.MacOsAArch64Linker;
 import jdk.internal.foreign.abi.x64.sysv.SysVx64Linker;
@@ -55,27 +59,25 @@ import java.util.function.Function;
 import java.util.stream.DoubleStream;
 import java.util.stream.IntStream;
 
-import static jdk.incubator.foreign.MemoryLayout.PathElement.groupElement;
-import static jdk.incubator.foreign.ValueLayout.JAVA_DOUBLE;
-import static jdk.incubator.foreign.ValueLayout.JAVA_INT;
-import static jdk.incubator.foreign.ValueLayout.JAVA_LONG;
+import static java.lang.foreign.MemoryLayout.PathElement.groupElement;
+import static java.lang.foreign.ValueLayout.JAVA_DOUBLE;
+import static java.lang.foreign.ValueLayout.JAVA_INT;
+import static java.lang.foreign.ValueLayout.JAVA_LONG;
 import static jdk.internal.foreign.PlatformLayouts.*;
 import static org.testng.Assert.*;
 
 public class VaListTest extends NativeTestHelper {
 
-    private static final CLinker abi = CLinker.systemCLinker();
+    private static final Linker abi = Linker.nativeLinker();
     static {
         System.loadLibrary("VaList");
     }
-
-    static final SymbolLookup LOOKUP = SymbolLookup.loaderLookup();
 
     private static final MethodHandle ADDRESS_TO_VALIST;
 
     static {
         try {
-            ADDRESS_TO_VALIST = MethodHandles.lookup().findStatic(VaList.class, "ofAddress", MethodType.methodType(VaList.class, MemoryAddress.class, ResourceScope.class));
+            ADDRESS_TO_VALIST = MethodHandles.lookup().findStatic(VaList.class, "ofAddress", MethodType.methodType(VaList.class, MemoryAddress.class, MemorySession.class));
         } catch (Throwable ex) {
             throw new ExceptionInInitializerError(ex);
         }
@@ -109,7 +111,7 @@ public class VaListTest extends NativeTestHelper {
 
 
     private static MethodHandle linkInternal(String symbol, FunctionDescriptor fd) {
-        return abi.downcallHandle(LOOKUP.lookup(symbol).get(), fd);
+        return abi.downcallHandle(findNativeOrThrow(symbol), fd);
     }
 
     private static MethodHandle linkVaListCB(String symbol) {
@@ -119,26 +121,26 @@ public class VaListTest extends NativeTestHelper {
     }
 
     private static final Function<Consumer<VaList.Builder>, VaList> winVaListFactory
-            = actions -> Windowsx64Linker.newVaList(actions, ResourceScope.newConfinedScope());
+            = actions -> Windowsx64Linker.newVaList(actions, MemorySession.openImplicit());
     private static final Function<Consumer<VaList.Builder>, VaList> sysvVaListFactory
-            = actions -> SysVx64Linker.newVaList(actions, ResourceScope.newConfinedScope());
+            = actions -> SysVx64Linker.newVaList(actions, MemorySession.openImplicit());
     private static final Function<Consumer<VaList.Builder>, VaList> linuxAArch64VaListFactory
-            = actions -> LinuxAArch64Linker.newVaList(actions, ResourceScope.newConfinedScope());
+            = actions -> LinuxAArch64Linker.newVaList(actions, MemorySession.openImplicit());
     private static final Function<Consumer<VaList.Builder>, VaList> macAArch64VaListFactory
-            = actions -> MacOsAArch64Linker.newVaList(actions, ResourceScope.newConfinedScope());
+            = actions -> MacOsAArch64Linker.newVaList(actions, MemorySession.openImplicit());
     private static final Function<Consumer<VaList.Builder>, VaList> platformVaListFactory
-            = (builder) -> VaList.make(builder, ResourceScope.newConfinedScope());
+            = (builder) -> VaList.make(builder, MemorySession.openConfined());
 
-    private static final BiFunction<Consumer<VaList.Builder>, ResourceScope, VaList> winVaListScopedFactory
-            = (builder, scope) -> Windowsx64Linker.newVaList(builder, scope);
-    private static final BiFunction<Consumer<VaList.Builder>, ResourceScope, VaList> sysvVaListScopedFactory
-            = (builder, scope) -> SysVx64Linker.newVaList(builder, scope);
-    private static final BiFunction<Consumer<VaList.Builder>, ResourceScope, VaList> linuxAArch64VaListScopedFactory
-            = (builder, scope) -> LinuxAArch64Linker.newVaList(builder, scope);
-    private static final BiFunction<Consumer<VaList.Builder>, ResourceScope, VaList> macAArch64VaListScopedFactory
-            = (builder, scope) -> MacOsAArch64Linker.newVaList(builder, scope);
-    private static final BiFunction<Consumer<VaList.Builder>, ResourceScope, VaList> platformVaListScopedFactory
-            = (builder, scope) -> VaList.make(builder, scope);
+    private static final BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> winVaListScopedFactory
+            = (builder, session) -> Windowsx64Linker.newVaList(builder, session);
+    private static final BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> sysvVaListScopedFactory
+            = (builder, session) -> SysVx64Linker.newVaList(builder, session);
+    private static final BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> linuxAArch64VaListScopedFactory
+            = (builder, session) -> LinuxAArch64Linker.newVaList(builder, session);
+    private static final BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> macAArch64VaListScopedFactory
+            = (builder, session) -> MacOsAArch64Linker.newVaList(builder, session);
+    private static final BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> platformVaListScopedFactory
+            = (builder, session) -> VaList.make(builder, session);
 
     @DataProvider
     @SuppressWarnings("unchecked")
@@ -166,7 +168,6 @@ public class VaListTest extends NativeTestHelper {
                     .addVarg(intLayout, 20));
         int x = sumInts.apply(3, vaList);
         assertEquals(x, 45);
-        vaList.scope().close();
     }
 
     @DataProvider
@@ -195,7 +196,6 @@ public class VaListTest extends NativeTestHelper {
                     .addVarg(doubleLayout, 5.0D));
         double x = sumDoubles.apply(3, vaList);
         assertEquals(x, 12.0D);
-        vaList.scope().close();
     }
 
     @DataProvider
@@ -220,13 +220,12 @@ public class VaListTest extends NativeTestHelper {
     public void testVaListMemoryAddress(Function<Consumer<VaList.Builder>, VaList> vaListFactory,
                                         Function<VaList, Integer> getFromPointer,
                                         ValueLayout.OfAddress pointerLayout) {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment msInt = MemorySegment.allocateNative(JAVA_INT, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment msInt = MemorySegment.allocateNative(JAVA_INT, session);
             msInt.set(JAVA_INT, 0, 10);
             VaList vaList = vaListFactory.apply(b -> b.addVarg(pointerLayout, msInt.address()));
             int x = getFromPointer.apply(vaList);
             assertEquals(x, 10);
-            vaList.scope().close();
         }
     }
 
@@ -240,7 +239,7 @@ public class VaListTest extends NativeTestHelper {
         TriFunction<GroupLayout, VarHandle, VarHandle, Function<VaList, Integer>> sumStructJavaFact
                 = (pointLayout, VH_Point_x, VH_Point_y) ->
                 list -> {
-                    MemorySegment struct = MemorySegment.allocateNative(pointLayout, ResourceScope.newImplicitScope());
+                    MemorySegment struct = MemorySegment.allocateNative(pointLayout, MemorySession.openImplicit());
                     list.nextVarg(pointLayout, SegmentAllocator.prefixAllocator(struct));
                     int x = (int) VH_Point_x.get(struct);
                     int y = (int) VH_Point_y.get(struct);
@@ -276,15 +275,14 @@ public class VaListTest extends NativeTestHelper {
     public void testStruct(Function<Consumer<VaList.Builder>, VaList> vaListFactory,
                            Function<VaList, Integer> sumStruct,
                            GroupLayout Point_LAYOUT, VarHandle VH_Point_x, VarHandle VH_Point_y) {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment struct = MemorySegment.allocateNative(Point_LAYOUT, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment struct = MemorySegment.allocateNative(Point_LAYOUT, session);
             VH_Point_x.set(struct, 5);
             VH_Point_y.set(struct, 10);
 
             VaList vaList = vaListFactory.apply(b -> b.addVarg(Point_LAYOUT, struct));
             int sum = sumStruct.apply(vaList);
             assertEquals(sum, 15);
-            vaList.scope().close();
         }
     }
 
@@ -294,7 +292,7 @@ public class VaListTest extends NativeTestHelper {
         TriFunction<GroupLayout, VarHandle, VarHandle, Function<VaList, Long>> sumStructJavaFact
                 = (BigPoint_LAYOUT, VH_BigPoint_x, VH_BigPoint_y) ->
                 list -> {
-                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, ResourceScope.newImplicitScope());
+                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, MemorySession.openImplicit());
                     list.nextVarg(BigPoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     long x = (long) VH_BigPoint_x.get(struct);
                     long y = (long) VH_BigPoint_y.get(struct);
@@ -330,15 +328,14 @@ public class VaListTest extends NativeTestHelper {
     public void testBigStruct(Function<Consumer<VaList.Builder>, VaList> vaListFactory,
                               Function<VaList, Long> sumBigStruct,
                               GroupLayout BigPoint_LAYOUT, VarHandle VH_BigPoint_x, VarHandle VH_BigPoint_y) {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, session);
             VH_BigPoint_x.set(struct, 5);
             VH_BigPoint_y.set(struct, 10);
 
             VaList vaList = vaListFactory.apply(b -> b.addVarg(BigPoint_LAYOUT, struct));
             long sum = sumBigStruct.apply(vaList);
             assertEquals(sum, 15);
-            vaList.scope().close();
         }
     }
 
@@ -348,7 +345,7 @@ public class VaListTest extends NativeTestHelper {
         TriFunction<GroupLayout, VarHandle, VarHandle, Function<VaList, Float>> sumStructJavaFact
                 = (FloatPoint_LAYOUT, VH_FloatPoint_x, VH_FloatPoint_y) ->
                 list -> {
-                    MemorySegment struct = MemorySegment.allocateNative(FloatPoint_LAYOUT, ResourceScope.newImplicitScope());
+                    MemorySegment struct = MemorySegment.allocateNative(FloatPoint_LAYOUT, MemorySession.openImplicit());
                     list.nextVarg(FloatPoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     float x = (float) VH_FloatPoint_x.get(struct);
                     float y = (float) VH_FloatPoint_y.get(struct);
@@ -385,15 +382,14 @@ public class VaListTest extends NativeTestHelper {
                                 Function<VaList, Float> sumFloatStruct,
                                 GroupLayout FloatPoint_LAYOUT,
                                 VarHandle VH_FloatPoint_x, VarHandle VH_FloatPoint_y) {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment struct = MemorySegment.allocateNative(FloatPoint_LAYOUT, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment struct = MemorySegment.allocateNative(FloatPoint_LAYOUT, session);
             VH_FloatPoint_x.set(struct, 1.234f);
             VH_FloatPoint_y.set(struct, 3.142f);
 
             VaList vaList = vaListFactory.apply(b -> b.addVarg(FloatPoint_LAYOUT, struct));
             float sum = sumFloatStruct.apply(vaList);
             assertEquals(sum, 4.376f, 0.00001f);
-            vaList.scope().close();
         }
     }
 
@@ -407,7 +403,7 @@ public class VaListTest extends NativeTestHelper {
         QuadFunc<GroupLayout, VarHandle, VarHandle, VarHandle, Function<VaList, Long>> sumStructJavaFact
                 = (HugePoint_LAYOUT, VH_HugePoint_x, VH_HugePoint_y, VH_HugePoint_z) ->
                 list -> {
-                    MemorySegment struct = MemorySegment.allocateNative(HugePoint_LAYOUT, ResourceScope.newImplicitScope());
+                    MemorySegment struct = MemorySegment.allocateNative(HugePoint_LAYOUT, MemorySession.openImplicit());
                     list.nextVarg(HugePoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     long x = (long) VH_HugePoint_x.get(struct);
                     long y = (long) VH_HugePoint_y.get(struct);
@@ -450,8 +446,8 @@ public class VaListTest extends NativeTestHelper {
                                VarHandle VH_HugePoint_x, VarHandle VH_HugePoint_y, VarHandle VH_HugePoint_z) {
         // On AArch64 a struct needs to be larger than 16 bytes to be
         // passed by reference.
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment struct = MemorySegment.allocateNative(HugePoint_LAYOUT, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment struct = MemorySegment.allocateNative(HugePoint_LAYOUT, session);
             VH_HugePoint_x.set(struct, 1);
             VH_HugePoint_y.set(struct, 2);
             VH_HugePoint_z.set(struct, 3);
@@ -459,7 +455,6 @@ public class VaListTest extends NativeTestHelper {
             VaList vaList = vaListFactory.apply(b -> b.addVarg(HugePoint_LAYOUT, struct));
             long sum = sumHugeStruct.apply(vaList);
             assertEquals(sum, 6);
-            vaList.scope().close();
         }
     }
 
@@ -503,9 +498,9 @@ public class VaListTest extends NativeTestHelper {
                           SumStackFunc sumStack,
                           ValueLayout.OfLong longLayout,
                           ValueLayout.OfDouble doubleLayout) {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment longSum = MemorySegment.allocateNative(longLayout, scope);
-            MemorySegment doubleSum = MemorySegment.allocateNative(doubleLayout, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment longSum = MemorySegment.allocateNative(longLayout, session);
+            MemorySegment doubleSum = MemorySegment.allocateNative(doubleLayout, session);
             longSum.set(JAVA_LONG, 0, 0L);
             doubleSum.set(JAVA_DOUBLE, 0, 0D);
 
@@ -518,11 +513,7 @@ public class VaListTest extends NativeTestHelper {
                 }
             });
 
-            try {
-                sumStack.invoke(longSum, doubleSum, list);
-            } finally {
-                list.scope().close();
-            }
+            sumStack.invoke(longSum, doubleSum, list);
 
             long lSum = longSum.get(JAVA_LONG, 0);
             double dSum = doubleSum.get(JAVA_DOUBLE, 0);
@@ -535,8 +526,8 @@ public class VaListTest extends NativeTestHelper {
     @Test(dataProvider = "upcalls")
     public void testUpcall(MethodHandle target, MethodHandle callback) throws Throwable {
         FunctionDescriptor desc = FunctionDescriptor.ofVoid(C_POINTER);
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            NativeSymbol stub = abi.upcallStub(callback, desc, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            Addressable stub = abi.upcallStub(callback, desc, session);
             target.invoke(stub);
         }
     }
@@ -553,13 +544,6 @@ public class VaListTest extends NativeTestHelper {
                 { MacOsAArch64Linker.emptyVaList()         },
                 { macAArch64VaListFactory.apply(b -> {})   },
         };
-    }
-
-    @Test(expectedExceptions = UnsupportedOperationException.class,
-            expectedExceptionsMessageRegExp = ".*Scope cannot be closed.*",
-            dataProvider = "emptyVaLists")
-    public void testEmptyNotCloseable(VaList emptyList) {
-        emptyList.scope().close();
     }
 
     @DataProvider
@@ -579,18 +563,18 @@ public class VaListTest extends NativeTestHelper {
     }
 
     @Test(dataProvider = "sumIntsScoped")
-    public void testScopedVaList(BiFunction<Consumer<VaList.Builder>, ResourceScope, VaList> vaListFactory,
+    public void testScopedVaList(BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> vaListFactory,
                                  BiFunction<Integer, VaList, Integer> sumInts,
                                  ValueLayout.OfInt intLayout) {
         VaList listLeaked;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession session = MemorySession.openConfined()) {
             VaList list = vaListFactory.apply(b -> b.addVarg(intLayout, 4)
-                            .addVarg(intLayout, 8), scope);
+                            .addVarg(intLayout, 8), session);
             int x = sumInts.apply(2, list);
             assertEquals(x, 12);
             listLeaked = list;
         }
-        assertFalse(listLeaked.scope().isAlive());
+        assertFalse(listLeaked.session().isAlive());
     }
 
     @Test(dataProvider = "structs")
@@ -598,62 +582,64 @@ public class VaListTest extends NativeTestHelper {
                                 Function<VaList, Integer> sumStruct, // ignored
                                 GroupLayout Point_LAYOUT, VarHandle VH_Point_x, VarHandle VH_Point_y) {
         MemorySegment pointOut;
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            try (ResourceScope innerScope = ResourceScope.newConfinedScope()) {
-                MemorySegment pointIn = MemorySegment.allocateNative(Point_LAYOUT, innerScope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            try (MemorySession innerSession = MemorySession.openConfined()) {
+                MemorySegment pointIn = MemorySegment.allocateNative(Point_LAYOUT, innerSession);
                 VH_Point_x.set(pointIn, 3);
                 VH_Point_y.set(pointIn, 6);
                 VaList list = vaListFactory.apply(b -> b.addVarg(Point_LAYOUT, pointIn));
-                pointOut = MemorySegment.allocateNative(Point_LAYOUT, scope);
+                pointOut = MemorySegment.allocateNative(Point_LAYOUT, session);
                 list.nextVarg(Point_LAYOUT, SegmentAllocator.prefixAllocator(pointOut));
                 assertEquals((int) VH_Point_x.get(pointOut), 3);
                 assertEquals((int) VH_Point_y.get(pointOut), 6);
-                list.scope().close();
-                assertTrue(pointOut.scope().isAlive()); // after VaList freed
+                assertTrue(pointOut.session().isAlive()); // after VaList freed
             }
-            assertTrue(pointOut.scope().isAlive()); // after inner scope freed
+            assertTrue(pointOut.session().isAlive()); // after inner session freed
         }
-        assertFalse(pointOut.scope().isAlive()); // after outer scope freed
+        assertFalse(pointOut.session().isAlive()); // after outer session freed
     }
 
     @DataProvider
     public Object[][] copy() {
         return new Object[][] {
-                { winVaListFactory,          Win64.C_INT   },
-                { sysvVaListFactory,         SysV.C_INT    },
-                { linuxAArch64VaListFactory, AArch64.C_INT },
-                { macAArch64VaListFactory,   AArch64.C_INT },
+                { winVaListScopedFactory,          Win64.C_INT   },
+                { sysvVaListScopedFactory,         SysV.C_INT    },
+                { linuxAArch64VaListScopedFactory, AArch64.C_INT },
+                { macAArch64VaListScopedFactory,   AArch64.C_INT },
         };
     }
 
     @Test(dataProvider = "copy")
-    public void testCopy(Function<Consumer<VaList.Builder>, VaList> vaListFactory, ValueLayout.OfInt intLayout) {
-        VaList list = vaListFactory.apply(b -> b.addVarg(intLayout, 4)
-                .addVarg(intLayout, 8));
-        VaList  copy = list.copy();
-        assertEquals(copy.nextVarg(intLayout), 4);
-        assertEquals(copy.nextVarg(intLayout), 8);
+    public void testCopy(BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> vaListFactory, ValueLayout.OfInt intLayout) {
+        try (var session = MemorySession.openConfined()) {
+            VaList list = vaListFactory.apply(b -> b.addVarg(intLayout, 4)
+                    .addVarg(intLayout, 8), session);
+            VaList copy = list.copy();
+            assertEquals(copy.nextVarg(intLayout), 4);
+            assertEquals(copy.nextVarg(intLayout), 8);
 
-//        try { // this logic only works on Windows!
-//            int x = copy.vargAsInt(intLayout);
-//            fail();
-//        } catch (IndexOutOfBoundsException ex) {
-//            // ok - we exhausted the list
-//        }
+            //        try { // this logic only works on Windows!
+            //            int x = copy.vargAsInt(intLayout);
+            //            fail();
+            //        } catch (IndexOutOfBoundsException ex) {
+            //            // ok - we exhausted the list
+            //        }
 
-        assertEquals(list.nextVarg(intLayout), 4);
-        assertEquals(list.nextVarg(intLayout), 8);
-        list.scope().close();
+            assertEquals(list.nextVarg(intLayout), 4);
+            assertEquals(list.nextVarg(intLayout), 8);
+        }
     }
 
     @Test(dataProvider = "copy",
             expectedExceptions = IllegalStateException.class)
-    public void testCopyUnusableAfterOriginalClosed(Function<Consumer<VaList.Builder>, VaList> vaListFactory,
+    public void testCopyUnusableAfterOriginalClosed(BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> vaListFactory,
                                                     ValueLayout.OfInt intLayout) {
-        VaList list = vaListFactory.apply(b -> b.addVarg(intLayout, 4)
-                .addVarg(intLayout, 8));
-        VaList copy = list.copy();
-        list.scope().close();
+        VaList copy;
+        try (var session = MemorySession.openConfined()) {
+            VaList list = vaListFactory.apply(b -> b.addVarg(intLayout, 4)
+                    .addVarg(intLayout, 8), session);
+            copy = list.copy();
+        }
 
         copy.nextVarg(intLayout); // should throw
     }
@@ -689,14 +675,14 @@ public class VaListTest extends NativeTestHelper {
 
         return new Object[][]{
                 { linkVaListCB("upcallBigStruct"), VaListConsumer.mh(vaList -> {
-                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, ResourceScope.newImplicitScope());
+                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, MemorySession.openImplicit());
                     vaList.nextVarg(BigPoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     assertEquals((long) VH_BigPoint_x.get(struct), 8);
                     assertEquals((long) VH_BigPoint_y.get(struct), 16);
                 })},
                 { linkVaListCB("upcallBigStruct"), VaListConsumer.mh(vaList -> {
                     VaList copy = vaList.copy();
-                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, ResourceScope.newImplicitScope());
+                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, MemorySession.openImplicit());
                     vaList.nextVarg(BigPoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     assertEquals((long) VH_BigPoint_x.get(struct), 8);
                     assertEquals((long) VH_BigPoint_y.get(struct), 16);
@@ -710,7 +696,7 @@ public class VaListTest extends NativeTestHelper {
                     assertEquals((long) VH_BigPoint_y.get(struct), 16);
                 })},
                 { linkVaListCB("upcallBigStructPlusScalar"), VaListConsumer.mh(vaList -> {
-                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, ResourceScope.newImplicitScope());
+                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, MemorySession.openImplicit());
                     vaList.nextVarg(BigPoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     assertEquals((long) VH_BigPoint_x.get(struct), 8);
                     assertEquals((long) VH_BigPoint_y.get(struct), 16);
@@ -722,27 +708,27 @@ public class VaListTest extends NativeTestHelper {
                     assertEquals(vaList.nextVarg(C_LONG_LONG), 42);
                 })},
                 { linkVaListCB("upcallStruct"), VaListConsumer.mh(vaList -> {
-                    MemorySegment struct = MemorySegment.allocateNative(Point_LAYOUT, ResourceScope.newImplicitScope());
+                    MemorySegment struct = MemorySegment.allocateNative(Point_LAYOUT, MemorySession.openImplicit());
                     vaList.nextVarg(Point_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     assertEquals((int) VH_Point_x.get(struct), 5);
                     assertEquals((int) VH_Point_y.get(struct), 10);
                 })},
                 { linkVaListCB("upcallHugeStruct"), VaListConsumer.mh(vaList -> {
-                    MemorySegment struct = MemorySegment.allocateNative(HugePoint_LAYOUT, ResourceScope.newImplicitScope());
+                    MemorySegment struct = MemorySegment.allocateNative(HugePoint_LAYOUT, MemorySession.openImplicit());
                     vaList.nextVarg(HugePoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     assertEquals((long) VH_HugePoint_x.get(struct), 1);
                     assertEquals((long) VH_HugePoint_y.get(struct), 2);
                     assertEquals((long) VH_HugePoint_z.get(struct), 3);
                 })},
                 { linkVaListCB("upcallFloatStruct"), VaListConsumer.mh(vaList -> {
-                    MemorySegment struct = MemorySegment.allocateNative(FloatPoint_LAYOUT, ResourceScope.newImplicitScope());
+                    MemorySegment struct = MemorySegment.allocateNative(FloatPoint_LAYOUT, MemorySession.openImplicit());
                     vaList.nextVarg(FloatPoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     assertEquals((float) VH_FloatPoint_x.get(struct), 1.0f);
                     assertEquals((float) VH_FloatPoint_y.get(struct), 2.0f);
                 })},
                 { linkVaListCB("upcallMemoryAddress"), VaListConsumer.mh(vaList -> {
                     MemoryAddress intPtr = vaList.nextVarg(C_POINTER);
-                    MemorySegment ms = MemorySegment.ofAddress(intPtr, C_INT.byteSize(), ResourceScope.globalScope());
+                    MemorySegment ms = MemorySegment.ofAddress(intPtr, C_INT.byteSize(), MemorySession.global());
                     int x = ms.get(JAVA_INT, 0);
                     assertEquals(x, 10);
                 })},
@@ -781,7 +767,7 @@ public class VaListTest extends NativeTestHelper {
                     assertEquals((float) vaList.nextVarg(C_DOUBLE), 13.0F);
                     assertEquals(vaList.nextVarg(C_DOUBLE), 14.0D);
 
-                    MemorySegment buffer = MemorySegment.allocateNative(BigPoint_LAYOUT, ResourceScope.newImplicitScope());
+                    MemorySegment buffer = MemorySegment.allocateNative(BigPoint_LAYOUT, MemorySession.openImplicit());
                     SegmentAllocator bufferAllocator = SegmentAllocator.prefixAllocator(buffer);
 
                     MemorySegment point = vaList.nextVarg(Point_LAYOUT, bufferAllocator);
@@ -823,7 +809,7 @@ public class VaListTest extends NativeTestHelper {
                 MethodHandle handle = MethodHandles.lookup().findVirtual(VaListConsumer.class, "accept",
                         MethodType.methodType(void.class, VaList.class)).bindTo(instance);
                 return MethodHandles.filterArguments(handle, 0,
-                        MethodHandles.insertArguments(ADDRESS_TO_VALIST, 1, ResourceScope.newConfinedScope()));
+                        MethodHandles.insertArguments(ADDRESS_TO_VALIST, 1, MemorySession.openConfined()));
             } catch (ReflectiveOperationException e) {
                 throw new InternalError(e);
             }
